syntax = "proto3";

package primary;

message AddRequest {
    int32 number = 1;
    int32 anotherNumber = 2;
}

message AddResponse {
    int64 sum = 1;
}

service Primary {
    rpc SumNumber (AddRequest) returns (AddResponse) {}
}